# school_management

./: .env.example  Cargo.toml  docker-compose.yml
migrations/: 20250609022351_create_students_table.sql
src/: config.rs  main.rs
