[package]
name = "studentApi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
bcrypt = "0.17.0"
dotenvy = "0.15.7"
postgres = "0.19.10"
serde = {version = "1.0.219", features =["derive"]}
serde_json = "1.0.140"
sqlx = {version = "0.8.6", features= ["postgres", "runtime-async-std-native-tls", "macros",  "migrate",  "uuid", "chrono"]}
thiserror = "2.0.12"
tokio = {version = "1.45.1", features = ["full"] }
uuid = {version ="1.17.0", features = ["v4", "serde"]}

